# rust-key

./: .env  Cargo.toml  password_manager.db
migrations/2023-11-18-215128_create_credentials/: down.sql  up.sql
src/: clipboard_manager.rs  commands.rs  lib.rs  main.rs  models.rs  schema.rs
src/cmd/: generate_password.rs  mod.rs
src/utils/: mod.rs
