[package]
name = "key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
clipboard = "0.5.0"
dialoguer = "0.11.0"
diesel = { version = "2.1.4", default-features = false, features = ["sqlite"] }
dotenvy = "0.15.7"
rand = "0.8.5"
rusqlite = "0.30.0"
